--- a/zadanieUI/DaysController/CustomeCellDay.xib
+++ b/zadanieUI/DaysController/CustomeCellDay.xib
@@ -10,61 +10,85 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomeCellDay" id="KGk-i7-Jjw" customClass="CustomeCellDay" customModule="zadanieUI" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomeCellDay" rowHeight="100" id="KGk-i7-Jjw" customClass="CustomeCellDay" customModule="zadanieUI" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="06w-Oy-juG">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XXl-7c-gig">
-                                <rect key="frame" x="8" y="12" width="110" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="110" id="thY-T7-y0e"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jas-DP-B7z">
-                                <rect key="frame" x="128" y="0.0" width="83" height="44"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="BJ5-I9-6j6">
+                                <rect key="frame" x="2" y="2" width="120" height="96"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a9l-DG-uUu">
-                                        <rect key="frame" x="0.0" y="0.0" width="41.5" height="44"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DayLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XXl-7c-gig">
+                                        <rect key="frame" x="0.0" y="0.0" width="120" height="26.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalCompressionResistancePriority="752" text="DescWeat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YeU-9x-9gi">
+                                        <rect key="frame" x="0.0" y="26.5" width="120" height="69.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="AHK-jF-3wy">
-                                        <rect key="frame" x="41.5" y="1.5" width="41.5" height="39.5"/>
-                                    </imageView>
                                 </subviews>
-                            </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eRN-54-Txb">
-                                <rect key="frame" x="231" y="12" width="81" height="20"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="81" id="abQ-Ll-Ed6"/>
+                                    <constraint firstAttribute="width" constant="120" id="TzV-Hg-SOB"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="AZR-Fm-ekw">
+                                <rect key="frame" x="134" y="2" width="155.5" height="96"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Temp" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eRN-54-Txb">
+                                        <rect key="frame" x="0.0" y="0.0" width="42.5" height="20.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="81" id="abQ-Ll-Ed6"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Rain" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a9l-DG-uUu">
+                                        <rect key="frame" x="0.0" y="39.5" width="42.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="FeelsTemp" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZUg-RI-pal">
+                                        <rect key="frame" x="0.0" y="79" width="100" height="17"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="InV-et-b2i"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="Ckc-Mq-Qgk"/>
+                                    <constraint firstAttribute="width" constant="155.5" id="RY7-B2-LVc"/>
+                                </constraints>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="AHK-jF-3wy">
+                                <rect key="frame" x="293.5" y="6.5" width="22.5" height="40.5"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="jas-DP-B7z" firstAttribute="top" secondItem="06w-Oy-juG" secondAttribute="top" id="Bcq-fq-MLJ"/>
-                            <constraint firstItem="jas-DP-B7z" firstAttribute="leading" secondItem="XXl-7c-gig" secondAttribute="trailing" constant="10" id="FLa-Dw-Q1i"/>
-                            <constraint firstItem="eRN-54-Txb" firstAttribute="leading" secondItem="jas-DP-B7z" secondAttribute="trailing" constant="20" id="Jbb-f1-9bF"/>
-                            <constraint firstItem="XXl-7c-gig" firstAttribute="leading" secondItem="06w-Oy-juG" secondAttribute="leadingMargin" id="TrA-mm-7hw"/>
-                            <constraint firstItem="XXl-7c-gig" firstAttribute="centerY" secondItem="jas-DP-B7z" secondAttribute="centerY" id="Wb3-5x-FZU"/>
-                            <constraint firstItem="eRN-54-Txb" firstAttribute="trailing" secondItem="06w-Oy-juG" secondAttribute="trailingMargin" id="cbU-Ef-C3v"/>
-                            <constraint firstAttribute="bottom" secondItem="jas-DP-B7z" secondAttribute="bottom" id="cqB-F9-kuQ"/>
-                            <constraint firstItem="XXl-7c-gig" firstAttribute="baseline" secondItem="eRN-54-Txb" secondAttribute="baseline" id="efH-La-iij"/>
-                            <constraint firstItem="XXl-7c-gig" firstAttribute="firstBaseline" secondItem="eRN-54-Txb" secondAttribute="firstBaseline" id="kJN-dB-0cE"/>
-                            <constraint firstItem="XXl-7c-gig" firstAttribute="top" secondItem="06w-Oy-juG" secondAttribute="top" constant="12" id="wzj-1L-Vxt"/>
+                            <constraint firstAttribute="bottom" secondItem="BJ5-I9-6j6" secondAttribute="bottom" constant="2" id="3v4-Rw-Iz1"/>
+                            <constraint firstItem="AHK-jF-3wy" firstAttribute="leading" secondItem="AZR-Fm-ekw" secondAttribute="trailing" constant="4" id="Gbw-KF-R5S"/>
+                            <constraint firstItem="AHK-jF-3wy" firstAttribute="top" secondItem="06w-Oy-juG" secondAttribute="top" constant="5" id="Kj9-yR-vcj"/>
+                            <constraint firstAttribute="trailing" secondItem="AHK-jF-3wy" secondAttribute="trailing" constant="4" id="Qgc-hV-eKe"/>
+                            <constraint firstAttribute="bottom" secondItem="AHK-jF-3wy" secondAttribute="bottom" constant="50" id="WWw-sT-yOj"/>
+                            <constraint firstItem="BJ5-I9-6j6" firstAttribute="top" secondItem="06w-Oy-juG" secondAttribute="top" constant="2" id="aac-LY-C6h"/>
+                            <constraint firstItem="BJ5-I9-6j6" firstAttribute="leading" secondItem="06w-Oy-juG" secondAttribute="leading" constant="2" id="hmd-Gr-5sq"/>
+                            <constraint firstItem="AZR-Fm-ekw" firstAttribute="leading" secondItem="BJ5-I9-6j6" secondAttribute="trailing" constant="12" id="kx5-bq-cCh"/>
+                            <constraint firstItem="AZR-Fm-ekw" firstAttribute="top" secondItem="06w-Oy-juG" secondAttribute="top" constant="2" id="vAJ-lI-Gnd"/>
+                            <constraint firstAttribute="bottom" secondItem="AZR-Fm-ekw" secondAttribute="bottom" constant="2" id="vCe-yF-kOv"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -77,11 +101,14 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="dayIcon" destination="AHK-jF-3wy" id="kuc-L9-HjC"/>
                 <outlet property="dayLabel" destination="XXl-7c-gig" id="LPl-dq-p8F"/>
+                <outlet property="descLabel" destination="YeU-9x-9gi" id="ldJ-Me-Kai"/>
+                <outlet property="feelsTempLabel" destination="ZUg-RI-pal" id="rn3-5S-f7Z"/>
                 <outlet property="rainLabel" destination="a9l-DG-uUu" id="Gmd-1r-WGq"/>
                 <outlet property="tempLabel" destination="eRN-54-Txb" id="lU4-MH-2sF"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="114.50892857142857"/>
+            <point key="canvasLocation" x="121.73913043478262" y="113.16964285714285"/>
         </tableViewCell>
     </objects>
     <resources>
