--- a/zadanieUI/DetailController/Base.lproj/DetailViewController.storyboard
+++ b/zadanieUI/DetailController/Base.lproj/DetailViewController.storyboard
@@ -113,7 +113,7 @@
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="248" image="umbrella.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ZzI-3W-IoN">
                                                 <rect key="frame" x="0.0" y="-1.5" width="174" height="132.5"/>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Msl-9L-zKJ">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Msl-9L-zKJ">
                                                 <rect key="frame" x="0.0" y="130" width="174" height="35"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                                 <nil key="textColor"/>
@@ -159,17 +159,19 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Location" image="location.fill" catalog="system" id="TC8-ku-NZW"/>
                     <navigationItem key="navigationItem" title="Weather" id="Ghb-Wq-8LU">
-                        <barButtonItem key="leftBarButtonItem" title="Item" image="star.fill" catalog="system" id="t6z-Z7-Jsl" userLabel="FavouriteButton">
-                            <connections>
-                                <action selector="favouriteButton:" destination="BYZ-38-t0r" id="vUg-a8-ImR"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="gJG-Vs-naB">
-                            <color key="tintColor" systemColor="tintColor"/>
-                            <connections>
-                                <action selector="search:" destination="BYZ-38-t0r" id="bhM-SG-lvO"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="search" id="gJG-Vs-naB">
+                                <color key="tintColor" systemColor="tintColor"/>
+                                <connections>
+                                    <action selector="search:" destination="BYZ-38-t0r" id="bhM-SG-lvO"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Item" image="star.fill" catalog="system" id="t6z-Z7-Jsl" userLabel="FavouriteButton">
+                                <connections>
+                                    <action selector="favouriteButton:" destination="BYZ-38-t0r" id="vUg-a8-ImR"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
